--- a/front/src/scss/variables.scss
+++ b/front/src/scss/variables.scss
@@ -3,8 +3,7 @@ $fontSize: 18px;
 $fontColor: red;
 $fontColorHover: white;
 $backgroundColor: rgb(254, 249, 249);
-$backgroundButton: red;
-// $backgroundImage: url("../assets/icon-above-font.png");
-$backgroundImage: url(https://github.com/CristinaPicazo/CONNECT-E/blob/d31c6271c7eb3b5387cf0409e293a982f344a6ad/front/connect-e/src/assets/icon-above-font.png);
+$backgroundButton: white;
+$backgroundImage: url("../assets/icon-above-font.png");
 $buttonBackground: rgb(203, 203, 203);
 $backgroundButtonHover: red;
