--- a/front/src/scss/mixins.scss
+++ b/front/src/scss/mixins.scss
@@ -8,6 +8,7 @@
     color: variables.$fontColor;
     box-shadow: 0px 5px 5px 5px darken(variables.$backgroundColor, 20%);
     transition: all 1s;
+    background-color: variables.$backgroundButton;
 
     a {
         text-decoration: none;
@@ -25,15 +26,15 @@
     }
 }
 
-@mixin generalBackground {
+@mixin generalView {
     font-family: variables.$geneneralFont;
     color: variables.$fontColor;
     background: variables.$backgroundColor;
     size: variables.$fontSize;
     background-image: variables.$backgroundImage;
     background-repeat: no-repeat;
-    background-size: contain, cover;
-    height: 100vh;
+    background-size: contain;
+    background-position: center;
 }
 
 @mixin footer {
