--- a/front/src/scss/variables.scss
+++ b/front/src/scss/variables.scss
@@ -7,3 +7,4 @@ $backgroundButton: white;
 $backgroundImage: url("../assets/icon-above-font.png");
 $buttonBackground: rgb(203, 203, 203);
 $backgroundButtonHover: red;
+$borderColor: red;
