--- a/front/src/scss/mixins.scss
+++ b/front/src/scss/mixins.scss
@@ -1,192 +1,93 @@
-@use 'variables.scss';
+@use "variables.scss";
 
 @mixin buttons {
-    // width: 140px;
-    // height: 50px;
-    border-radius: 45px;
-    // border-color: variables.$backgroundButtonHover;
-    // color: variables.$fontColor;
-    box-shadow: 0px 5px 5px 5px darken(variables.$backgroundColor, 20%);
-    transition: all 1s;
+  box-shadow: 0px 5px 5px 5px darken(variables.$backgroundColor, 20%);
+  transition: all 1s;
 
-    &:hover,
-    &:focus {
-        background-color: variables.$backgroundButtonHover;
-        box-shadow: 0px 15px 20px variables.$backgroundButtonHover;
-        transform: translateY(-7px) scale(1.1);
-        color: variables.$fontColorHover;
-
-        a {
-            color: variables.$fontColorHover;
-        }
+  &:hover,
+  &:focus {
+    background-color: variables.$backgroundButtonHover !important;
+    box-shadow: 0px 15px 20px variables.$backgroundButtonHover !important;
+    transform: translateY(-7px) scale(1.1) !important;
+    color: variables.$fontColorHover !important;
+    a {
+      color: variables.$fontColorHover !important;
     }
+  }
 }
 
 @mixin generalView {
-    font-family: variables.$geneneralFont;
-    color: variables.$fontColor;
-    background: variables.$backgroundColor;
-    size: variables.$fontSize;
-    background-image: variables.$backgroundImage;
-    background-repeat: repeat;
-    background-size: contain;
-    background-position: center;
-    background-size: 300px;
-}
-
-@mixin footer {
-    .footerButtons {
-        @include buttons;
-        align-self: end;
-    }
-
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    bottom: 0;
-    left: 0;
-    right: 0;
+  background-image: variables.$backgroundImage;
+  background-repeat: repeat;
+  background-size: contain;
+  background-position: center;
+  background-size: 300px;
 }
 
 @mixin navBar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 20px;
-    height: 60px;
-    background-color: variables.$backgroundColor;
-    box-shadow: 0px 5px 5px 5px darken(variables.$backgroundColor, 20%);
-    transition: all 1s;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
+  height: 60px;
+  box-shadow: 0px 5px 5px 5px darken(variables.$backgroundColor, 20%);
+  transition: all 1s;
+
+  :hover,
+  :focus {
+    transform: translateY(-7px) scale(1.1);
 
     a {
-        text-decoration: none;
-        color: variables.$fontColor;
+      color: variables.$fontColorHover;
     }
-
-    :hover,
-    :focus {
-        transform: translateY(-7px) scale(1.1);
-
-        a {
-            color: variables.$fontColorHover;
-        }
-    }
-}
-
-@mixin signUp {
-    height: 100vh;
-    display: flex;
-
-    .signUpForm {
-        margin: auto;
-        padding: 10%;
-        border: 1px solid black;
-
-        h2 {
-            text-align: center;
-            font-size: 3em;
-        }
-
-        label {
-            width: 100%;
-            margin: 10px 0;
-        }
-
-        input {
-            width: 100%;
-            border: 1px solid black;
-            padding: 10px;
-        }
-    }
+  }
 }
 
 @mixin forms {
-    border-radius: 45px;
-    border-color: variables.$backgroundButtonHover;
-    color: variables.$fontColor;
-    box-shadow: 0px 5px 5px 5px darken(variables.$backgroundColor, 20%);
-    background-color: variables.$backgroundButton;
+  box-shadow: 0px 5px 5px 5px darken(variables.$backgroundColor, 20%);
 
-    input:focus,
-    textarea:focus {
-        outline: 8px ridge variables.$borderColor;
-        border-radius: 2rem;
-    }
-
-    input,
-    textarea {
-        border-radius: 2rem;
-        outline: solid variables.$borderColor;
-    }
-
-    margin: auto;
-    padding: 10%;
-    border: 1px solid black;
-
-    h2 {
-        text-align: center;
-        font-size: 3em;
-    }
-
-    label {
-        width: 100%;
-        margin: 10px 0;
-    }
-
-    input {
-        width: 100%;
-        border: 1px solid black;
-        padding: 10px;
-    }
+  input:focus,
+  textarea:focus {
+    outline: 8px ridge variables.$borderColor;
+    border-radius: 2rem;
+  }
+  h2 {
+    font-size: 3em;
+  }
 }
 
 @mixin posts {
-    border-radius: 45px;
-    border-color: variables.$backgroundButtonHover;
-    color: variables.$fontColor;
-    box-shadow: 0px 5px 5px 5px darken(variables.$backgroundColor, 20%);
-    background-color: variables.$backgroundButton;
+  border-radius: 45px;
+  border-color: variables.$backgroundButtonHover;
+  color: variables.$fontColor;
+  box-shadow: 0px 5px 5px 5px darken(variables.$backgroundColor, 20%);
+  background-color: variables.$backgroundButton;
 
+  margin: auto;
+  padding: 10%;
+  border: 1px solid black;
 
-    margin: auto;
-    padding: 10%;
-    border: 1px solid black;
+  h2 {
+    text-align: center;
+    font-size: 3em;
+  }
 
+  .individual-cards {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    margin: 20px;
+    width: 100%;
+    height: 100%;
 
-    h2 {
-        text-align: center;
-        font-size: 3em;
+    &:hover,
+    &:focus {
+      background-color: variables.$backgroundButtonHover;
+      box-shadow: 0px 15px 20px variables.$backgroundButtonHover;
+      transform: translateY(-7px) scale(1.1);
+      color: variables.$fontColorHover;
+
+      a {
+        color: variables.$fontColorHover;
+      }
     }
-
-
-    .individual-cards {
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        align-items: center;
-        margin: 20px;
-        width: 100%;
-        height: 100%;
-
-        &:hover,
-        &:focus {
-            background-color: variables.$backgroundButtonHover;
-            box-shadow: 0px 15px 20px variables.$backgroundButtonHover;
-            transform: translateY(-7px) scale(1.1);
-            color: variables.$fontColorHover;
-
-            a {
-                color: variables.$fontColorHover;
-            }
-        }
-    }
-
-    .not-read {
-        background-color: lighten(variables.$backgroundButtonHover,45%);
-    }
+  }
 }
