--- a/front/src/scss/mixins.scss
+++ b/front/src/scss/mixins.scss
@@ -40,6 +40,7 @@
 }
 
 @mixin forms {
+  margin: 50rem 3rem;
   box-shadow: 0px 5px 5px 5px darken(variables.$backgroundColor, 20%);
   transition: all 1s;
   .cards {
