--- a/front/src/scss/mixins.scss
+++ b/front/src/scss/mixins.scss
@@ -1,22 +1,8 @@
 @use "variables.scss";
 
-@mixin buttons {
-  box-shadow: 0px 5px 5px 5px darken(variables.$backgroundColor, 20%);
-  transition: all 1s;
-
-  &:hover,
-  &:focus {
-    background-color: variables.$backgroundButtonHover !important;
-    box-shadow: 0px 15px 20px variables.$backgroundButtonHover !important;
-    transform: translateY(-7px) scale(1.1) !important;
-    color: variables.$fontColorHover !important;
-    a {
-      color: variables.$fontColorHover !important;
-    }
-  }
-}
-
 @mixin generalView {
+  margin: 0;
+  padding: 0;
   background-image: variables.$backgroundImage;
   background-repeat: repeat;
   background-size: contain;
@@ -25,29 +11,41 @@
 }
 
 @mixin navBar {
-  height: 60px;
-  box-shadow: 0px 5px 5px 5px darken(variables.$backgroundColor, 20%);
+  box-shadow: variables.$box-shadow;
   transition: all 1s;
-
   :hover,
   :focus {
     transform: translateY(-7px) scale(1.1);
-
     a {
       color: variables.$fontColorHover;
     }
   }
 }
 
-@mixin forms {
-  margin: 50rem 3rem;
-  box-shadow: 0px 5px 5px 5px darken(variables.$backgroundColor, 20%);
+@mixin buttons {
+  box-shadow: variables.$box-shadow;
   transition: all 1s;
-  .cards {
+
+  &:hover,
+  &:focus {
+    background-color: variables.$backgroundButtonHover !important;
+    box-shadow: variables.$box-shadow;
+    transform: translateY(-7px) scale(1.1) !important;
+    color: variables.$fontColorHover !important;
+    a {
+      color: variables.$fontColorHover !important;
+    }
+  }
+}
+
+@mixin forms {
+  box-shadow: variables.$box-shadow;
+  transition: all 1s;
+  div > div {
     &:hover,
     &:focus {
       background-color: variables.$backgroundButtonHover !important;
-      box-shadow: 0px 15px 20px variables.$backgroundButtonHover !important;
+      box-shadow: variables.$box-shadow !important;
       transform: translateY(-7px) scale(1.1) !important;
       color: variables.$fontColorHover !important;
       a {
