--- a/front/src/scss/mixins.scss
+++ b/front/src/scss/mixins.scss
@@ -16,6 +16,7 @@
   :hover,
   :focus {
     transform: translateY(-7px) scale(1.1);
+    cursor: pointer;
     a {
       color: variables.$fontColorHover;
     }
