corrected truncate text

--- a/front/src/scss/mixins.scss
+++ b/front/src/scss/mixins.scss
@@ -50,7 +50,10 @@
       transform: translateY(-7px) scale(1.1) !important;
       color: variables.$fontColorHover !important;
       a {
-        color: variables.$fontColorHover !important;
+        &:visited {
+          color: variables.$fontColor !important;
+          color: variables.$backgroundColor !important;
+        }
       }
     }
   }
